2003-06-06  Jordi Mallach  <jordi@sindominio.net>

	* src/config.c (config_loadconfig): load values for new keys.
	Add notify functions for new gconf keys.
	* src/config.h: Add new declarations and key defines.
	* src/dialogs.c (prefdialog_drawkeys): Add new actions to treeview.
	* src/gtetrinet (main): Notify gconf of changes to new keys.
	* src/tetrinet.c (tetrinet_key): Handle new special keys. Closes
	Bugzilla Bug#105117.

	* gtetrinet.schemas.in: Add schemas for new configurable game keys.

2003-06-05  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Update for 0.7.2.

2003-06-05  Dani Carbonell  <bocata@panete.net>

	* src/partyline.c (textentry): Show the /msgs commands in the partyline.

2003-06-05  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2003-06-04  Dani Carbonell  <bocata@panete.net>

	* src/partyline.c (is_nick): new function, it will compare the
	actual string with a complete nickname. The completion will be
	done with the first match.
	(playerlist_complete_nick): new function, it'll launch the
	iteration through the player list, calling is_nick for each nick.
	(entrykey): launch the nick completion when the TAB key is hit.

	* src/commands.h (show_stop_button, show_start_button): new functions.

	* src/commands.c: changed the button order.
	(make_menus): hide the stop button just after the toolbar has been created.
	(show_stop_button): new function, it will hide the start button,
	and show the stop one.
	(show_start_button): new function, it will show the start button,
	and hide the stop one.

	* src/tetrinet.c (tetrinet_inmessage): show / hide the toolbar
	buttons when required.

2003-06-03  Jordi Mallach  <jordi@sindominio.net>

	* gtetrinet.desktop.in: change value of Terminal from 0 to false to
	placate desktop-file-validate.

2003-06-02  Dani Carbonell  <bocata@panete.net>

	* src/dialogs.c (prefdialog_new): changed the size of some widgets
	in the Keyboard tab.
